src/test/ui/invalid/invalid-llvm-passes.rs
// build-fail
// compile-flags: -Cpasses=unknown-pass -Z new-llvm-pass-manager=yes

fn main() {}
